# super-todo-list-qt6

./: CMakeLists.txt  Main.qml  README.md  TodoLine.qml  assets.qrc  main.cpp
